放送予定画面に0件時と通信失敗時のメッセージを実装

--- a/app/src/main/res/layout/fragment_program_list.xml
+++ b/app/src/main/res/layout/fragment_program_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,4 +15,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/textViewEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="直近の放送予定は無いようです。"
+        android:textColor="@color/colorTextPrimary"
+        android:textSize="@dimen/text_large"
+        android:visibility="gone" />
+</FrameLayout>
