--- a/app/src/main/res/layout/row_program_list.xml
+++ b/app/src/main/res/layout/row_program_list.xml
@@ -7,7 +7,8 @@
     android:paddingBottom="@dimen/row_vertical_margin"
     android:paddingLeft="@dimen/row_horizontal_margin"
     android:paddingRight="@dimen/row_horizontal_margin"
-    android:paddingTop="@dimen/row_vertical_margin">
+    android:paddingTop="@dimen/row_vertical_margin"
+    android:background="@drawable/button_background">
 
     <LinearLayout
         android:layout_width="0dp"
