--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="row_horizontal_margin">16dp</dimen>
     <dimen name="row_vertical_margin">8dp</dimen>
 
+    <dimen name="text_large2">24sp</dimen>
     <dimen name="text_large">16sp</dimen>
     <dimen name="text_medium">14sp</dimen>
     <dimen name="text_small">12sp</dimen>
