--- a/app/src/main/res/layout/activity_episode.xml
+++ b/app/src/main/res/layout/activity_episode.xml
@@ -42,7 +42,7 @@
                 android:id="@+id/textViewEpisodeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_toRightOf="@id/textViewEpisodeNumber"
                 android:textColor="@color/colorTextPrimary"
@@ -57,7 +57,7 @@
                 android:layout_marginBottom="32dp"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/text_medium"
-                tools:text="✓1回見ました" />
+                tools:text="@string/episode_recode_count" />
 
             <LinearLayout
                 android:id="@+id/layoutEdit"
@@ -82,6 +82,34 @@
                         android:textSize="@dimen/text_medium" />
                 </android.support.design.widget.TextInputLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="0"
+                        android:stepSize="0.1"
+                        android:theme="@style/RatingBarTheme"/>
+
+                    <TextView
+                        android:id="@+id/textViewRatingNum"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:text="-"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/text_large"
+                        tools:text="2.5" />
+                </LinearLayout>
+
                 <CheckBox
                     android:id="@+id/checkboxTwitter"
                     android:layout_width="wrap_content"
@@ -91,6 +119,7 @@
                     android:textColor="@color/colorTextPrimary" />
 
                 <Button
+                    android:id="@+id/buttonRecode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_accent_color"
