--- a/app/src/main/res/values/preferences_keys.xml
+++ b/app/src/main/res/values/preferences_keys.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="key_preference_is_notification">preference_is_notification</string>
     <string name="key_preference_notification_buffer">preference_notification_buffer</string>
+    <string name="key_preference_notification_with_sound">preference_notification_with_sound</string>
     <string name="key_token">token</string>
 </resources>
