--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/button_accent_color"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:text="@string/about_license"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/text_medium" />
