--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -71,33 +71,33 @@
 
             <Button
                 android:id="@+id/buttonSite"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewWatchersCount"
+                android:layout_marginBottom="16dp"
                 android:layout_marginRight="8dp"
-                android:background="@drawable/button_accent_color"
                 android:text="@string/work_site"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="16dp"/>
+                android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/buttonWikipedia"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewWatchersCount"
                 android:layout_marginRight="8dp"
                 android:layout_toRightOf="@id/buttonSite"
-                android:background="@drawable/button_accent_color"
                 android:text="@string/work_wikipedia"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/buttonTwitter"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewWatchersCount"
                 android:layout_toRightOf="@id/buttonWikipedia"
-                android:background="@drawable/button_accent_color"
                 android:text="@string/work_twitter"
                 android:textColor="@android:color/white" />
 
