--- a/app/src/main/res/layout/fragment_program_list.xml
+++ b/app/src/main/res/layout/fragment_program_list.xml
@@ -9,11 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/card_background"
+            android:dividerHeight="0dp"
+            android:divider="@null"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
