--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="colorAccent_light">#B2DFDB</color>
     <color name="colorTextPrimary">#333</color>
     <color name="colorTextSecondary">#757575</color>
-
     <color name="click_background">#EEE</color>
+    <color name="card_background">#EEE</color>
 </resources>
