--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="row_horizontal_margin">16dp</dimen>
     <dimen name="row_vertical_margin">8dp</dimen>
+    <dimen name="card_horizontal_margin">8dp</dimen>
+    <dimen name="card_vertical_margin">4dp</dimen>
 
     <dimen name="text_large2">24sp</dimen>
     <dimen name="text_large">18sp</dimen>
