TopActivityからコンテンツ部分をFragmentに分離

--- a/app/src/main/res/layout/activity_top.xml
+++ b/app/src/main/res/layout/activity_top.xml
@@ -13,10 +13,10 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -28,20 +28,11 @@
 
             </android.support.v7.widget.Toolbar>
 
-            <com.astuetz.PagerSlidingTabStrip
-                android:id="@+id/pagerTab"
+            <FrameLayout
+                android:id="@+id/layoutFragmentContainer"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_below="@id/toolbar"
-                android:background="?attr/colorPrimary"
-                tab:pstsIndicatorColor="@android:color/white" />
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/pagerTab" />
-        </RelativeLayout>
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="240dp"
