--- a/app/src/main/res/layout/fragment_my_anime_list.xml
+++ b/app/src/main/res/layout/fragment_my_anime_list.xml
@@ -10,8 +10,8 @@
         android:layout_height="match_parent">
 
 
-        <ListView
-            android:id="@+id/listView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
